feat: add validation and response DTOs for appointment management
- Added DB_PORT configuration to .env.example
- Included spring-boot-starter-validation dependency in pom.xml
- Refactored AppointmentController to use new request and response DTOs
- Created CreateAppointmentRequest and AppointmentResponse classes
- Updated AuthController to use LoginRequest and LoginResponse DTOs
- Implemented ErrorResponse and MessageResponse for consistent error handling
- Enhanced AppointmentService to handle new request structure and user authentication
- Introduced GlobalExceptionHandler for centralized exception management
- Modified TimeSlot entity to use Instant instead of LocalDateTime
- Updated application.yaml to use DB_PORT for database connection
- Refactored CalendarView component for improved code readability and consistency